[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Menu/Settings.gd" type="Script" id=1]
[ext_resource path="res://Fonts/RussoOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Menu/return.png" type="Texture" id=3]
[ext_resource path="res://Assets/Menu/soun off.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[node name="Settings" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -126.0
margin_top = -121.0
margin_right = 1284.0
margin_bottom = 768.0
color = Color( 0.505882, 0.698039, 0.698039, 1 )

[node name="BackButton" type="TouchScreenButton" parent="."]
scale = Vector2( 4, 4 )
normal = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 131.0
margin_top = 332.0
margin_right = 490.0
margin_bottom = 410.0
custom_fonts/font = SubResource( 1 )
text = "Music : On"

[node name="SoundOff" type="TouchScreenButton" parent="."]
position = Vector2( 528, 305 )
scale = Vector2( 4, 4 )
normal = ExtResource( 4 )

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="SoundOff" to="." method="_on_SoundOff_pressed"]
